# F2Native

./: .clang-format  .gitignore  .gitmodules  1.render-page.js  10.render-page.js  10.render-page.js.map  11.render-page.js  11.render-page.js.map  12.render-page.js  12.render-page.js.map  13.render-page.js  13.render-page.js.map  14.render-page.js  14.render-page.js.map  15.render-page.js  15.render-page.js.map  16.render-page.js  16.render-page.js.map  16KB_SUPPORT_GUIDE.md  17.render-page.js  17.render-page.js.map  18.render-page.js  18.render-page.js.map  19.render-page.js  19.render-page.js.map  20.render-page.js  20.render-page.js.map  21.render-page.js  21.render-page.js.map  22.render-page.js  22.render-page.js.map  23.render-page.js  23.render-page.js.map  24.render-page.js  24.render-page.js.map  25.render-page.js  25.render-page.js.map  26.render-page.js  26.render-page.js.map  27.render-page.js  (+142 more)
404/: index.html
android/f2native/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/f2native/src/androidTest/java/com/antgroup/antv/f2/: F2InstrumentedTest.java  F2TestProxy.java
android/f2native/src/main/: AndroidManifest.xml
android/f2native/src/main/java/com/antgroup/antv/f2/: AntGLauncher.java  F2AndroidCanvasContext.java  F2AndroidCanvasView.java  F2AntGCanvasView.java  F2BridgeRailing.java  F2CSUtils.java  F2CanvasView.java  F2Chart.java  F2ChartBridge.java  F2ChartBridgeListener.java  F2CommonHelper.java  F2CommonUtils.java  F2Config.java  F2Constants.java  F2DetectManager.java  F2Event.java  F2Function.java  F2Geom.java  F2Guide.java  F2ImageLoadUtil.java  F2Log.java  F2RenderThread.java  F2RenderThreadFactory.java  F2StandaloneRenderThread.java  F2Util.java  HandlerThreadFactory.java  IF2ChartInvokeCallback.java  NativeCanvasHolder.java  NativeCanvasProxy.java  NativeChartProxy.java  RequestAnimationFrameHandle.java
android/f2native/src/main/java/com/antgroup/antv/f2/base/: F2BaseCanvasContext.java  F2BaseCanvasHandle.java  F2BaseCanvasView.java
android/f2native/src/main/java/com/antgroup/antv/f2/gesture/: F2GestureListener.java
android/f2native/src/main/java/com/antgroup/antv/f2/service/: F2CommonDefault.java  F2CommonService.java  F2LogDefault.java  F2LogService.java
android/f2native/src/main/res/values/: strings.xml
android/f2native/src/standalone/java/com/antgroup/antv/f2/: F2CanvasView.java  F2StandaloneRenderThread.java  NativeCanvasHolder.java  NativeCanvasProxy.java
core/: CMakeLists.txt  Core.h
core/android/: BitmapCanvasContext.cpp  BitmapCanvasContext.h  BridgeRailingAndroid.cpp  BridgeRailingAndroid.h  CanvasImage.cpp  F2CanvasView.cpp  F2CanvasView.h  F2NativeJNI.cpp  F2NativeJNI.h  JNIReflection.cpp  JNIReflection.h  JNIUtil.cpp  JNIUtil.h  JavaChartBridgeCallBack.cpp  JavaChartBridgeCallBack.h  JavaF2Function.h  JavaRef.cpp  JavaRef.h
core/bridge/: AbstractBridgeRailing.h  ChartBridge.cpp  ChartBridge.h
core/graphics/: CMakeLists.txt  XChart.cpp  XChart.h  global.h
core/graphics/adjust/: Dodge.h  Stack.h
core/graphics/animate/: Animator.h  GeomAnimate.cpp  GeomAnimate.h  TimeLine.cpp  TimeLine.h
core/graphics/axis/: AxisController.cpp  AxisController.h
core/graphics/canvas/: Canvas.cpp  Canvas.h  CanvasColorParser.cpp  CanvasColorParser.h  CanvasContext.h  CanvasFillStrokeStyle.h  CanvasFontParser.cpp  CanvasFontParser.h  CanvasImage.h  Cartesian.h  Container.h  Coord.h  Polar.h  StandaloneCanvasContext.h
core/graphics/event/: EventController.h
core/graphics/func/: Command.h  Func.h
core/graphics/geom/: Area.cpp  Area.h  Candle.cpp  Candle.h  Geom.cpp  Geom.h  Interval.cpp  Interval.h  Line.cpp  Line.h  Path.h  Point.cpp  Point.h
core/graphics/geom/attr/: AttrBase.h
core/graphics/geom/shape/: Area.h  Candle.h  GeomShapeBase.h  GeomShapeFactory.cpp  GeomShapeFactory.h  Interval.h  Line.h  Point.h
core/graphics/guide/: Background.cpp  Background.h  Flag.cpp  Flag.h  GuideBase.cpp  GuideBase.h  GuideController.cpp  GuideController.h  Image.cpp  Image.h  Line.cpp  Line.h  Point.cpp  Point.h  RefLine.cpp  RefLine.h  Tag.cpp  Tag.h  Text.cpp  Text.h
core/graphics/interaction/: InteractionBase.h  InteractionContext.cpp  InteractionContext.h  Pan.cpp  Pan.h  Pinch.cpp  Pinch.h  Tap.cpp  Tap.h
core/graphics/legend/: LegendController.cpp  LegendController.h
core/graphics/scale/: CMakeLists.txt  Category.h  Identity.h  KLineCat.h  Scale.cpp  Scale.h  ScaleController.cpp  ScaleController.h  TimeCategory.h
core/graphics/scale/continuous/: FiveDaysLinear.h  Linear.cpp  Linear.h  TimeSharingLinear.h
core/graphics/shape/: Area.cpp  Area.h  Circle.cpp  Circle.h  Element.cpp  Element.h  Group.cpp  Group.h  Image.cpp  Image.h  Line.cpp  Line.h  Marker.cpp  Marker.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rect.cpp  Rect.h  Shape.cpp  Shape.h  Text.cpp  Text.h
core/graphics/tooltip/: ToolTip.cpp  ToolTip.h  TooltipController.cpp  TooltipController.h
core/graphics/util/: BBox.h  Color.cpp  Color.h  Matrix.h  Path.h  Point.h  Vector2d.h  json.cpp  json.h  json_data.h  json_util.h
core/ios/: BridgeRailingIOS.h  BridgeRailingIOS.mm  CanvasImage.mm  ConicPainter.h  ConicPainter.m  CoreGraphicsContext.h  CoreGraphicsContext.mm  F2Logger.h  F2Logger.mm
core/reflection/: constructor.cpp  constructor.h  enum.cpp  enum.h  exception.h  field.cpp  field.h  method.cpp  method.h  param.cpp  param.h  qualified_type.cpp  qualified_type.h  reflection.h  string_helper.h  type.cpp  type.h  utils.h
core/token/: DarkModeManager.cpp  DarkModeManager.h
core/utils/: CMakeLists.txt  StringUtil.cpp  StringUtil.h  Tracer.cpp  Tracer.h  common.cpp  common.h  xtime.h
core/wasi/: CanvasImage.cpp  Wasi.cpp  WasiCanvasContext.cpp  WasiCanvasContext.h  WebCanvasContext.cpp
core/webassembly/: CanvasImage.cpp  WebCanvasContext.cpp  WebCanvasContext.h  XChart+WebAssembly.cpp
en/: index.html
ios/: F2.podspec  Info.plist
ios/F2/: F2.h  (+22 more)
page-data/: app-data.json
site/: locale.json
tests/: CMakeLists.txt  main.cpp  run.sh
wasi/: CMakeLists.txt  build.sh
webassembly/: CMakeLists.txt  build.sh
zh/: index.html
(+713 files in other folders)
